# python_notes

./: .gitignore  closure_.py  composition_.py  decorators_.py  ex.py  example.py  example3.py  functional_programming.ipynb  functions.ipynb  functions_homework.py  immutable_ex.py  iterations.ipynb  pattern_matching.py  pyproject.toml  recursion.py  scope_.py  template.html
Abstract_classes/: abc_.py  abc_2.py  negatype_.py  temperatre_.py
Numpy/: numpy_v1.ipynb
OOP/: oop_v1.py  oop_v2.py  oop_v3_iterator.py
OOP/Intro/: example1.py  example2.py  example3.py  example4.py  example5.py  example66.py  example7.py  example8.py
OOP/exceptions_/: example2.py  example3.py  example4.py  example5.py  example6.py  example7.py
OOP/logging_/: example1.py  (+2 more)
async_notes/: pyproject.toml  util.py
async_notes/concurrent_web_requests/: chat_server.py  connected_socket.py  web_request.py  web_server.py
async_notes/intro/: example10.py  example_1.py  example_11.py  example_12.py  example_13.py  example_14.py  example_17.py  example_18.py  example_2.py  example_3.py  example_4_fib.py  example_5.py  example_6.py  example_7.py  example_8.py  example_9.py  headers.txt  magic.py
async_notes/performance/: docker-compose.yaml  server_2.py
attributes_/: attrs_.py  attrs_lookup.py  descriptors_.py  slots_.py
bite_oriented_programming/: file_permissions.py  helpers.py  vector.c
data_object_descriptor/: example.py  example_2.py
meta_programming/: pyproject.toml
meta_programming/introspection/: batch.py  convert.py  dump.py  duplicates_meta.py  example.py  example_descriptor.py  example_inheritance.py  metakwargs.py  template_dp_meta.py  tracing_meta.py
meta_programming/meta_subclass/: table.csv  table.json  table_encoders.py
meta_programming/tests/: test_bitfield.py
my_exercises/: decorators_1.py  exceptions_.py  lambda_.py  oop.py  tuple_unpacking.py
