[tool.poetry]
name = "python_notes"
version = "0.1.0"
description = ""
authors = ["CezarySzukiel <cezary.szukiel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tomli = "^2.2.1"

[tool.poetry.dev-dependencies]
mypy = "1.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
