[project]
name = "meta-programming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
    "conftest"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "smoke: buisiness core logic",
]

addopts = [
    "-ra -q",
]

[tool.coverage.run]
omit = [
   "*/tests/*.py"
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
